--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
       <td><h1> Kunal Rawat </h1>
       <p><em>Founder and MD of <strong><a href="https://www.youtube.com/channel/UCVXf52NvmSnY-p7xymW3D8g">Kazuto Gaming !!</a> </strong></em> </p>
-      <p>I am IT Student in <a href="https://www.bpitindia.com">BPIT !!</a>I will be completing my BTech by 2025 !!<br />Currently I am more focusing in C and Web Devlopment !!</p></td>
+      <p>I am IT Student in <a href="https://www.bpitindia.com">BPIT</a> !! I will be completing my BTech by 2025 !!<br />Currently I am more focusing in C and Web Devlopment !!</p></td>
     </tr>
   </table>
 
